--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -172,6 +172,7 @@ ndo
 
 
 X.XX - YYYY
+- New INI setting MiscDisable=false and option to prevent misc optimization (#54, Dm Kh).
 - Implemented /NoWindow command-line option to hide FileOptimizer when starting (Devedse).
 - Improved About window.
 - flexiGIF has been disabled due to corruption and inestability. Hope it could be reenabled soon.
