--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -136,7 +136,7 @@ ndo
 - Ghostscript 9.26 - http://www.ghostscript.com
 - GNU Strip 2.30 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.8.15 - http://www.imagemagick.org
+- ImageMagick 7.0.8.21 - http://www.imagemagick.org
 - ImageWorsener 1.3.3 - http://entropymine.com/imageworsener
 - jhead 3.02 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -172,6 +172,8 @@ ndo
 
 
 X.XX - YYYY
+- Updated russian translation (thanks Max).
+- Updated ImageMagick to 7.0.8.21 with HDRI support.
 
 
 
