--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,7 @@ ndo
 X.XX - YYYY
 - Updated russian translation (thanks Max).
 - Updated ImageMagick to 7.0.8.21 with HDRI support.
+- Upgraded distributions to 7-Zip 18.06.
 
 
 
