--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -138,7 +138,7 @@ ndo
 - Guetzli 1.0.1 - https://github.com/google/guetzli
 - ImageMagick 7.0.8.21 - http://www.imagemagick.org
 - ImageWorsener 1.3.3 - http://entropymine.com/imageworsener
-- jhead 3.02 - http://www.sentex.net/~mwandel/jhead/
+- jhead 3.03 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
 - jpegoptim 1.4.6 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9b - http://jpegclub.org/jpegtran/
@@ -175,6 +175,7 @@ X.XX - YYYY
 - Updated russian translation (thanks Max).
 - Updated Leanify to 0.4.3.227 daily binaries.
 - Updated ImageMagick to 7.0.8.21 with HDRI support.
+- Updated to jHead 3.03.
 - Upgraded distributions to 7-Zip 18.06.
 
 
