Rewritten log format (FatBit)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1439 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -172,6 +172,7 @@ ndo
 
 
 X.XX - YYYY
+- Rewritten log format (FatBit).
 - Updated russian translation (thanks Max).
 - Updated Leanify to 0.4.3.227 daily binaries.
 - Updated ImageMagick to 7.0.8.21 with HDRI support.
