--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -145,7 +145,7 @@ ndo
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.227 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
 - libdeflate 0.8 - https://github.com/ebiggers/libdeflate
-- libwebp 1.0.1 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
+- libwebp 1.0.2 RC1 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
 - mozjpeg 3.3.1-3 - https://github.com/garyzyg/mozjpeg-windows/
@@ -177,6 +177,7 @@ X.XX - YYYY
 - Updated Leanify to 0.4.3.227 daily binaries.
 - Updated ImageMagick to 7.0.8.21 with HDRI support.
 - Updated to jHead 3.03.
+- Updated libwebp to 1.0.2 RC1.
 - Upgraded distributions to 7-Zip 18.06.
 
 
