--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -136,7 +136,7 @@ ndo
 - Ghostscript 9.26 - http://www.ghostscript.com
 - GNU Strip 2.30 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.8.21 - http://www.imagemagick.org
+- ImageMagick 7.0.8.23 - http://www.imagemagick.org
 - ImageWorsener 1.3.3 - http://entropymine.com/imageworsener
 - jhead 3.03 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -154,7 +154,7 @@ ndo
 - mutool 1.14 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.98.46 - http://css-ig.net/pingo
+- pingo 0.98.48 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.12.0 - http://www.pngquant.org
@@ -175,9 +175,10 @@ X.XX - YYYY
 - Rewritten log format (FatBit).
 - Updated russian translation (thanks Max).
 - Updated Leanify to 0.4.3.227 daily binaries.
-- Updated ImageMagick to 7.0.8.21 with HDRI support.
 - Updated to jHead 3.03.
 - Updated libwebp to 1.0.2 RC1.
+- Updated ImageMagick to 7.0.8.23 with HDRI support.
+- Updated pingo to 0.98.48 x64 version.
 - Upgraded distributions to 7-Zip 18.06.
 
 
